# AQC

./: .gitignore  CMakeLists.txt  CMakePresets.json  MoveLibrary.bat  MoveLibraryToUnreal.bat  README.md
Documents/: formularios.tex  local.tex  main.tex  pre.tex  referencias.bib
Documents/capitulos/_template/: .tex
Documents/capitulos/algoritmo_voo/: .tex
Documents/capitulos/conclusao/: .tex
Documents/capitulos/controle_atitude/: .tex
Documents/capitulos/descricao/: .tex
Documents/capitulos/introducao/: .tex
Documents/capitulos/modelagem/: .tex  old.tex
Documents/capitulos/modelagem/imgs/: atitude_dcl.dwg  drone_orientation.dwg  lift_forces.dwg  ref_frame.dwg
Documents/capitulos/perspectivas/: .tex
Documents/capitulos/resultados/: .tex
Documents/capitulos/revisao/: .tex
Documents/tex/: ufrgscca-abnt.sty  ufrgscca-core.sty  ufrgscca-cover.sty  ufrgscca-gen.sty  ufrgscca-lists.sty  ufrgscca.cls
Include/: AQC.h
Include/Acoplador/: Acoplador.h  GerenciadorAcopladores.h
Include/Algoritmo/: Algoritmo.h
Include/Controlador/: IControlador.h  PID.h  RNL.h
Include/Modelo/: Modelo.h
Include/Sensor/: Barometro.h  Bussola.h  GPS.h  GerenciadorSensores.h  IMU.h  ISensor.h  SensorDistancia.h
Include/Utils/: Constantes.h  Mutex.h  Tipos.h
Scripts/: ReplaceLibraryFile.py
Source/: AQC.cpp  CMakeLists.txt  main.cpp
Source/Acoplador/: Acoplador.cpp  CMakeLists.txt  GerenciadorAcopladores.cpp
Source/Algoritmo/: Algoritmo.cpp  CMakeLists.txt
Source/Controlador/: CMakeLists.txt  PID.cpp  RNL.cpp
Source/Modelo/: CMakeLists.txt  Modelo.cpp
Source/Sensor/: Barometro.cpp  Bussola.cpp  CMakeLists.txt  GPS.cpp  GerenciadorSensores.cpp  IMU.cpp  SensorDistancia.cpp
Source/Utils/: CMakeLists.txt  Mutex.cpp  Tipos.cpp
